# pointcloud-normals-cuda

./: CMakeLists.txt
bunny/: Q2
include/: cov.h  cutil_math2.h  eig.h  simple.h
matlab/: Cuda.m  eigCuda.m  err.m  kernel.m  testCov.m  testEig.m  testEstimateNormals.m
src/: cov.cu  eig.cu  main.cpp  simple.cu
